docs: unify @author tag to @author <a href="https://github.com/loong10k">Loong Wan</a>